# AnotherYetEngine

./: .gitignore  CMakeLists.txt
shaders/: diffuse_frag.glsl  diffuse_vert.glsl  frag.glsl  glitch_frag.glsl  pass_frag.glsl  pass_vert.glsl  ray_tracing_comp.glsl  simple_tex_frag.glsl  vert.glsl
src/: camera.cpp  camera.h  common.cpp  common.h  load_model.h  load_shader.cpp  load_shader.h  main.cpp  model.cpp  model.h  normal_maps.h  renderable.h  shapes.h  texture.cpp  texture.h  timer.h  window.cpp  window.h
